--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Scrapper</title>
+    <title>Scraper</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 </head>
